# arlynn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: main.py  node.py  nodegraph.py
app/nodes/: oscillator.py  output.py
arl/: CMakeLists.txt  audioengine.cpp  audioengine.h  fifo.h  main.cpp  message.h  node.cpp  node.h  signal.h
arl/audioclients/: CMakeLists.txt  audioclient.h  dummyclient.cpp  dummyclient.h  portaudioclient.cpp  portaudioclient.h
arl/nodes/: CMakeLists.txt  oscillator.cpp  output.cpp
cmake/modules/: FindPortaudio.cmake
cmake/scripts/: libraries.cmake
res/nodes/: amplifier.xml  audio-amplitude.xml
res/ui/: arlynn.cmb  arlynn.ui
resources/nodes/: audio-amplitude.xml  oscillator.xml  output.xml
src/: CMakeLists.txt  configure.h.in  main.cpp
src/core/: CMakeLists.txt  audioengine.cpp  audioengine.h  fifo.h  message.h  node.cpp  node.h  project.cpp  project.h  signal.cpp  signal.h
src/core/audioclients/: CMakeLists.txt  audioclient.h  dummyclient.cpp  dummyclient.h  portaudioclient.cpp  portaudioclient.h
src/core/nodes/: CMakeLists.txt  amplifier.cpp  amplifier.h  audio-amplitude.cpp  audio-amplitude.h  oscillator.cpp  oscillator.h  output.cpp  output.h
src/gui/: CMakeLists.txt  app.cpp  app.h  canvas.cpp  canvas.h  canvascontrol.cpp  canvascontrol.h  canvasnode.cpp  canvasnode.h  mainframe.cpp  mainframe.h
test/: CMakeLists.txt  benchmark.cpp  fifo.cpp  run.cpp
